--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root{
+    --primary-dark: hsl(210, 88%, 30%);
+    --primary-blue: hsl(210, 39%, 35%);
+    --primary-black: hsl(210, 25%, 25%);
+  }
+
 #hero {
     height: 100vh;
     display: flex;
@@ -6,7 +12,7 @@
     align-items: center;
     text-align: center;
     background: radial-gradient(600px 300px at center top, rgba(59,130,246,.25), transparent),
-    hsl(210, 39%, 35%);
+    var(--primary-blue);
     padding: 0 3rem;
     animation: fadeInUp 1.2s ease-out;
     position: relative;
@@ -14,7 +20,7 @@
 
 #hero h1 {
     font-size: 3.5rem;
-    font-weight: 550;
+    font-weight: 500;
     color: #FFF;
     letter-spacing: 1px;
     text-shadow: none; /* Removed for subtlety */
@@ -111,10 +117,10 @@
     height: 325px;
     border-radius: 50%;
     object-fit: cover;
-    background-color: hsl(210, 39%, 35%);
+    background-color: var(--primary-blue);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.18),
     0 12px 30px rgba(0, 0, 0, 0.12);
-    border: 4px solid hsl(210, 39%, 40%); 
+    border: 4px solid var(--primary-dark); 
 }
 
 .about1 img:hover {
@@ -142,10 +148,10 @@
 
 .sub-title {
     font-size: 37px;
-    font-weight: 750;
+    font-weight: 700;
     margin-bottom: 20px;
     margin-top: 0;
-    color: hsl(210, 88%, 30%);;
+    color: var(--primary-dark)
 }
 
 .tab-titles {
@@ -165,7 +171,7 @@
     content: '';
     width: 0%;
     height: 2px;
-    background: hsl(210, 88%, 30%);
+    background: var(--primary-dark);
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -189,7 +195,7 @@
 }
 
 .tab-contents ul li span {
-    color: hsl(210, 88%, 30%);;
+    color: var(--primary-dark);
     font-size: 14px;
 }
 
@@ -199,11 +205,10 @@
     transition: 
         opacity 0.45s cubic-bezier(0.22, 1, 0.36, 1),
         transform 0.45s cubic-bezier(0.22, 1, 0.36, 1);
-
-    position: absolute;
     left: 0;
     width: 100%;
     pointer-events: none;
+    display:none;
 }
 
 .tab-contents.active-tab {
@@ -211,10 +216,7 @@
     transform: translateY(0);
     position: relative;
     pointer-events: auto;
-}
-
-.education-item{
-    margin-top: 25px;
+    display:block;
 }
 
 .about2 .education-item p {
@@ -250,7 +252,7 @@
     width: 260px;
 
     background: #fff;
-    border-left: 3px solid hsl(210, 39%, 35%);
+    border-left: 3px solid var(--primary-blue);
     padding: 12px 14px;
     border-radius: 10px;
 
@@ -294,7 +296,7 @@
     margin-bottom: 18px;
     letter-spacing: 0.3px;
     font-weight: 600;
-    color: hsl(210, 25%, 25%);
+    color: var(--primary-black);
 }
 
 /* ================= ICON PNG ================= */
@@ -358,14 +360,14 @@
 
 .education-item {
     text-align: left;
-    margin-bottom: 10px;
+    margin:25px 0 10px;
 }
 
 .education-item h4 {
     margin-top: 10px;
     font-size: 16px;
     font-weight: bold;
-    color: hsl(210, 88%, 30%); ;
+    color: var(--primary-dark) ;
     margin-bottom: 5px;
 }
 
@@ -386,8 +388,8 @@
     gap: 8px;
 
     background-color: transparent;
-    border: 1.5px solid hsl(210, 39%, 35%);
-    color: hsl(210, 39%, 35%);
+    border: 1.5px solid var(--primary-blue);
+    color: var(--primary-blue);
 
     padding: 10px 22px;
     font-size: 14px;
@@ -405,7 +407,7 @@
 }
 
 .download-btn:hover {
-    background-color: hsl(210, 39%, 35%);
+    background-color: var(--primary-blue);
     color: #fff;
     transform: translateY(-2px);
     box-shadow: 0 12px 28px rgba(0, 0, 0, 0.18);
@@ -436,7 +438,7 @@
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 18px;
-    color: hsl(210, 25%, 25%);
+    color: var(--primary-black);
 }
 
 .tools-container {
@@ -485,14 +487,21 @@
     max-width: 100%;
     margin: 0 auto;
 
-    background:hsl(210, 39%, 35%);
+    background:var(--primary-blue);
 }
 
 .organization-wrapper {
-    background: hsl(210, 39%, 35%);
+    background: var(--primary-blue);
     padding: 60px 0px;
 }
 
+.section-title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 50px;
+    color: var(--primary-blue);
+}
 
 .org-title {
     text-align: center;
@@ -525,8 +534,6 @@
     height: 120px;
     margin: 0 auto 26px;
     border-radius: 50%;
-    /* background: rgba(15, 35, 55, 0.75);
-    border: 1px solid rgba(255,255,255,0.15); */
     background: #ffffff;
     border: 1px solid rgba(0,0,0,0.08);
     display: flex;
@@ -579,8 +586,8 @@
 .cert-title {
     text-align: center;
     font-size: 36px;
-    font-weight: 750;
-    color: hsl(210, 39%, 35%);
+    font-weight: 700;
+    color: var(--primary-blue);
 }
 
 .cert-subtitle {
@@ -653,7 +660,7 @@
 
 .cert-btn:hover {
     background: #fff;
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
 }
 
 /* ================= MODAL ================= */
@@ -706,15 +713,6 @@
     background: #f8fafc;
 }
 
-.section-title {
-    text-align: center;
-    font-size: 36px;
-    font-weight: 700;
-    margin-bottom: 70px !important;
-    color: #0f172a;
-    letter-spacing: -0.5px;
-}
-
 .work-grid {
     max-width: 1100px;
     margin: auto;
@@ -733,7 +731,7 @@
     0 4px 10px rgba(15, 23, 42, 0.12),
     0 14px 40px rgba(15, 23, 42, 0.18);
     transition: all .35s ease;
-    border-top: 4px solid hsl(210, 39%, 35%);
+    border-top: 4px solid var(--primary-blue);
 
     display: flex;
     flex-direction: column;
@@ -819,7 +817,7 @@
 .modal-box h3 {
     font-size: 22px;
     margin-bottom: 6px;
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
 }
 
 .modal-box span {
@@ -838,7 +836,7 @@
 .modal-box h4 {
     margin-top: 22px;
     font-size: 15px;
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
 }
 
 .modal-box ul {
@@ -864,7 +862,7 @@
     font-size: 12px;
     border-radius: 999px;
     background: hsl(210, 39%, 90%);
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
 }
 
 .modal-image {
@@ -888,12 +886,6 @@
 
 .modal-image img[src*="noona"]{
     transform: scale(1.8);
-}
-
-/* ===== IMAGE CONTAINER ===== */
-.modal-image {
-    width: 100%;
-    margin-bottom: 22px;
 }
 
 /* MODE HERO (default) */
@@ -1036,7 +1028,7 @@
     display: inline-block;
     font-size: 13px;
     font-weight: 600;
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
     margin-bottom: 10px;
 }
 
@@ -1047,7 +1039,7 @@
     gap: 6px;
     font-size: 14px;
     font-weight: 600;
-    color: hsl(210, 39%, 35%);
+    color: var(--primary-blue);
     transition: gap .3s ease, opacity .3s ease;
     text-decoration: none;
 }
@@ -1249,13 +1241,11 @@
 
     /* ---------- FOOTER ---------- */
     #footer{
-        margin-bottom: -15px !important;
+        margin-bottom: -7px !important;
     }
     
-
     section {
         scroll-margin-top: 20px;
-        scroll-margin-bottom: 90px;
     }
 
     .scroll-indicator {
@@ -1272,17 +1262,8 @@
     }
 
     .row {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;;
         text-align: center;
-    }
-
-    .about1 {
-        margin-bottom: 24px;
-    }
-
-    *{
-        text-decoration: none;
+        gap: 0px !important;
     }
 }
